<resources>
    <string name="app_name">Пожертвования</string>
    <string name="main_placeholder">У Вас пока нет сборов.\nНачните доброе дело.</string>
    <string name="main_btn">Создать сбор</string>
    <string name="fundsActivityHeaderTitle">Пожертвования</string>
    <string name="fundTypeActivityHeaderTitle">Тип сбора</string>
    <string name="targetFundTitle">Целевой сбор</string>
    <string name="additionalFundInfoTitle">Дополнительно</string>
    <string name="targetFundDescription">Когда есть определённая цель</string>
    <string name="regularFundTitle">Регулярный сбор</string>
    <string name="regularFundDescription">Если помощь нужна ежемесячно</string>
    <string-array name="catNames">
        <item>Счёт VK Pay * 1234</item>
        <item>Счёт VK Pay * 228</item>
    </string-array>

    <string name="create_fund">Создать сбор</string>

    <string name="snippet_author">Матвей Правосудов</string>
    <string name="new_date">час назад</string>
    <string name="new_text">Сейчас самое время помочь тем, кто не может попросить о помощи сам.</string>
    <string name="snippet_title">Добряши помогают котикам</string>
    <string name="snippet_subtitle">Матвей Правосудов • Закончится через 5 дней</string>
    <string name="snippet_raised">Собрано 8 750 ₽ из 10 000 ₽</string>
    <string name="snippet_help">Помочь</string>

    <string-array name="authorNames">
        <item>Матвей Правосудов</item>
        <item>Кирилл Левосудов</item>
    </string-array>
    <string name="post_author">Автор Матвей Правосудов</string>
    <string name="post_left">Сбор закончится через 5 дней</string>
    <string name="post_till">Нужно собрать до 10 сентября</string>
    <string name="post_goal">10 000 ₽</string>
    <string name="post_current">8 750 ₽</string>
    <string name="post_body">Привет-привет, добряш!\n\nЯ создал это событие, чтобы показать какие у меня прекрасные добряши и буду счастлив, если получится вдохновить кого-нибудь хотя бы на маленький перевод в пользу фонда Юна.\n\n◾ Если получится собрать 1 000 рублей, то это будет 5 обработанных животных от блох и клещей.\n\n◾ Собранные 5 000 рублей превратятся в 25 кг корма для подопечных фонда.\n\n◾ А 10 000 рублей позволят провести курс занятий с кинологом по социализации сложной собаки. Чтобы она легче нашла свой дом.\n\nВ благотворительности не бывает маленьких сумм, поэтому если вы хотите помочь, то переведите любую сумму, будь-то 10 рублей или 1000 💚</string>
    <string name="post_5min">5 мин</string>
    <string name="post_comment">Отправил.</string>
</resources>
