<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FundTypeChooseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:theme="@style/ToolbarColoredBackArrow"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:title="@string/fundTypeActivityHeaderTitle" />
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="62dp"

            android:background="@drawable/rounded_card"

            app:cardBackgroundColor="@color/cardBackgroundColor"


            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/targetFundIcon"

                    android:layout_width="24dp"
                    android:layout_height="24dp"

                    android:layout_marginStart="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:src="@drawable/crosshair_blue"
                    />

                <LinearLayout
                    android:id="@+id/targetLayoutTextsBox"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center_vertical"
                    android:orientation="vertical"

                    android:layout_marginLeft="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/targetFundIcon"

                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/targetFundTitle"

                        android:fontFamily="@font/roboto"
                        android:fontWeight="500"
                        android:textFontWeight="800"
                        android:textSize="16dp"
                        app:lineHeight="20dp"
                        android:letterSpacing="-0.02"
                        android:textStyle="bold"

                        android:textColor="@color/colorBlack"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/targetFundDescription"

                        android:fontFamily="@font/roboto"
                        android:textSize="13dp"
                        app:lineHeight="20dp"
                        android:letterSpacing="-0.02"

                        android:textColor="@color/grayTextColor"
                        />
                </LinearLayout>

                <ImageView
                    android:layout_width="9.5dp"
                    android:layout_height="16.5dp"

                    android:layout_marginEnd="30.75dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:src="@drawable/right_arrow_gray"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="12dp"

            android:layout_width="match_parent"
            android:layout_height="62dp"

            android:background="@drawable/rounded_card"

            app:cardBackgroundColor="@color/cardBackgroundColor"


            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/regularFundIcon"

                    android:layout_width="24dp"
                    android:layout_height="24dp"

                    android:layout_marginStart="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:src="@drawable/calendar_blue"
                    />

                <LinearLayout
                    android:id="@+id/regularLayoutTextsBox"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center_vertical"
                    android:orientation="vertical"

                    android:layout_marginLeft="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/regularFundIcon"

                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/regularFundTitle"

                        android:fontFamily="@font/roboto"
                        android:fontWeight="500"
                        android:textFontWeight="800"
                        android:textSize="16dp"
                        app:lineHeight="20dp"
                        android:letterSpacing="-0.02"
                        android:textStyle="bold"

                        android:textColor="@color/colorBlack"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/regularFundDescription"

                        android:fontFamily="@font/roboto"
                        android:textSize="13dp"
                        app:lineHeight="20dp"
                        android:letterSpacing="-0.02"

                        android:textColor="@color/grayTextColor"
                        />
                </LinearLayout>

                <ImageView

                    android:layout_width="9.5dp"
                    android:layout_height="16.5dp"

                    android:layout_marginEnd="30.75dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:src="@drawable/right_arrow_gray"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>