<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbarDefaultDelayBeforeFade="0"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="0dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="22dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/avatar" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:scrollbarDefaultDelayBeforeFade="0"
                    android:scrollbarFadeDuration="0"
                    android:scrollbarSize="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:fontWeight="500"
                            android:letterSpacing="-0.02"
                            android:text="@string/snippet_author"
                            android:textColor="@color/colorAlmostBlackText"
                            android:textFontWeight="500"
                            android:textSize="15dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:lineHeight="20dp" />

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="16dp"
                            android:layout_height="4dp"
                            android:layout_marginEnd="14dp"
                            android:layout_marginRight="14dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_dots" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:fontWeight="400"
                        android:text="@string/new_date"
                        android:textColor="@color/colorPlaceholder"
                        android:textFontWeight="400"
                        android:textSize="12dp"
                        app:lineHeight="14dp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/roboto"
                android:letterSpacing="-0.02"
                android:text="@string/new_text"
                android:textColor="@color/colorBlackText"
                android:textSize="15dp"
                app:lineHeight="20dp" />

            <include layout="@layout/snippet" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>